--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vault"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "build:action": "tsc && ncc build"
   },
   "dependencies": {
     "@actions/core": "^1.3.0",
@@ -26,6 +27,7 @@
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@types/node": "^15.12.0",
+    "@zeit/ncc": "^0.22.3",
     "prettier": "^2.3.0",
     "semantic-release": "^17.4.3",
     "ts-node": "^10.0.0",
