--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "build": "tsc && ncc build"
   },
   "dependencies": {
-    "@actions/core": "^1.3.0",
-    "@actions/exec": "^1.0.4",
-    "@actions/io": "^1.1.0",
     "commander": "^7.2.0",
     "dotenv": "^10.0.0",
     "node-vault": "^0.9.21"
   },
   "devDependencies": {
+    "@actions/core": "^1.3.0",
+    "@actions/exec": "^1.0.4",
+    "@actions/io": "^1.1.0",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@types/node": "^15.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "@zeit/ncc": "^0.22.3",
     "cross-env": "^7.0.3",
+    "eslint": "^7.27.0",
     "prettier": "^2.3.0",
     "semantic-release": "^17.4.3",
     "ts-node": "^10.0.0",
