--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Yarn
         run: npm install --global yarn
 
+      - name: Install dependencies
+        run: yarn
+
       - name: Build artifact
         run: yarn build
 
