--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,16 @@
 {
   "branches": [
     "latest"
+  ],
+  "plugins": [
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "eslint"
+      }
+    ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    "@semantic-release/github"
   ]
 }
