--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
       "url": "https://github.com/vladyslavvolkov"
     }
   ],
-  "bin": {
-    "vault-env": "build/cli.js"
-  },
+  "bin": "build/cli.js",
   "publishConfig": {
     "access": "public"
   },
@@ -43,8 +41,10 @@
     "@actions/core": "^1.3.0",
     "@actions/exec": "^1.0.4",
     "@actions/io": "^1.1.0",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
+    "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/node": "^15.12.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
