--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vault-env",
+  "name": "@bn-digital/vault-env",
   "description": "Populates .env file with values, provided by Hashicorp's Vault",
   "version": "1.0.0",
   "readme": "README.md",
@@ -30,6 +30,7 @@
   "scripts": {
     "run": "ts-node src/cli.ts",
     "release": "semantic-release",
+    "fix": "prettier --write src",
     "build": "tsc && ncc build src/action.ts"
   },
   "dependencies": {
@@ -39,8 +40,6 @@
   },
   "devDependencies": {
     "@actions/core": "^1.3.0",
-    "@actions/exec": "^1.0.4",
-    "@actions/io": "^1.1.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
@@ -49,8 +48,13 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "@zeit/ncc": "^0.22.3",
+    "conventional-changelog-eslint": "^3.0.9",
     "cross-env": "^7.0.3",
     "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
     "prettier": "^2.3.0",
     "semantic-release": "^17.4.3",
     "ts-node": "^10.0.0",
