New: implemented merge functionality, sorting fields

--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,4 @@ MAILGUN_PUBLIC_KEY=staging/mailgun/mg-bndigital-dev/public-key
 S3_SECRET_ACCESS_KEY=staging/digitalocean/spaces/secret-access-key
 S3_ACCESS_KEY_ID=staging/digitalocean/spaces/access-key-id
 DATABASE_PASSWORD=staging/postgresql/database-password
+DATABASE_CLIENT=path/which/does/not/exist
