--- a/.releaserc
+++ b/.releaserc
@@ -6,7 +6,37 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "eslint"
+        "preset": "eslint",
+        "releaseRules": [
+          {
+            "tag": "Breaking",
+            "release": "major"
+          },
+          {
+            "tag": "Build",
+            "release": "minor"
+          },
+          {
+            "tag": "Chore",
+            "release": "minor"
+          },
+          {
+            "tag": "Fix",
+            "release": "patch"
+          },
+          {
+            "tag": "New",
+            "release": "minor"
+          },
+          {
+            "tag": "Update",
+            "release": "minor"
+          },
+          {
+            "tag": "Upgrade",
+            "release": "minor"
+          }
+        ]
       }
     ],
     "@semantic-release/release-notes-generator",
