--- a/.releaserc
+++ b/.releaserc
@@ -39,7 +39,48 @@
         ]
       }
     ],
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "eslint",
+        "releaseRules": [
+          {
+            "tag": "Breaking",
+            "release": "major"
+          },
+          {
+            "tag": "Build",
+            "release": "minor"
+          },
+          {
+            "tag": "Chore",
+            "release": "minor"
+          },
+          {
+            "tag": "Fix",
+            "release": "patch"
+          },
+          {
+            "tag": "New",
+            "release": "minor"
+          },
+          {
+            "tag": "Update",
+            "release": "minor"
+          },
+          {
+            "tag": "Upgrade",
+            "release": "minor"
+          }
+        ]
+      }
+    ],
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
     "@semantic-release/npm",
     "@semantic-release/github"
   ]
