Fixed: Broken logic overwriting old values

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
       "url": "https://github.com/vladyslavvolkov"
     }
   ],
-  "bin": "build/cli.js",
+  "bin": {
+    "vault-env": "build/cli.js"
+  },
   "publishConfig": {
     "access": "public"
   },
