--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
       "url": "https://github.com/vladyslavvolkov"
     }
   ],
-  "bin": {
-    "vault-env": "build/cli.js"
-  },
+  "bin": "build/cli.js",
   "publishConfig": {
     "access": "public"
   },
@@ -48,7 +46,7 @@
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.2",
-    "@types/node": "^15.12.0",
+    "@types/node": "^15.12.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "@zeit/ncc": "^0.22.3",
