--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,7 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
-preferAggregateCacheInfo: true
 enableGlobalCache: true
+
 nodeLinker: node-modules
+
+preferAggregateCacheInfo: true
+
+yarnPath: .yarn/releases/yarn-3.1.1.cjs
