--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bn-digital/vault-env",
   "description": "Populates .env file with values, provided by Hashicorp's Vault",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "readme": "README.md",
   "author": {
     "name": "Vlad Volkov",
@@ -15,11 +15,13 @@
       "url": "https://github.com/vladyslavvolkov"
     }
   ],
-  "bin": "build/cli.js",
+  "bin": "lib/cli.js",
   "publishConfig": {
     "access": "public"
   },
-  "main": "build/index.js",
+  "types": "lib",
+  "files": ["lib"],
+  "main": "lib/index.js",
   "keywords": [
     "ci-cd",
     "devops",
@@ -28,38 +30,34 @@
     "vault"
   ],
   "scripts": {
-    "run": "ts-node src/cli.ts",
+    "compile": "tsc",
+    "run": "yarn compile && node lib/cli.js",
     "release": "semantic-release",
     "fix": "prettier --write src",
-    "build": "tsc && ncc build src/action.ts"
+    "build": "yarn compile && ncc build src/action.ts"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
-    "commander": "^7.2.0",
+    "chalk": "^4.1.2",
+    "commander": "^8.3.0",
     "dotenv": "^10.0.0",
-    "node-vault": "^0.9.21"
+    "node-vault": "^0.9.22"
   },
   "devDependencies": {
-    "@actions/core": "^1.3.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.2",
-    "@types/node": "^15.12.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@actions/core": "^1.6.0",
+    "@bn-digital/commitlint-config": "^1.2.2",
+    "@bn-digital/eslint-config": "^1.17.5",
+    "@bn-digital/prettier-config": "^1.13.1",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/node": "^17.0.4",
     "@zeit/ncc": "^0.22.3",
-    "conventional-changelog-eslint": "^3.0.9",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^6.0.0",
-    "prettier": "^2.3.0",
-    "semantic-release": "^17.4.3",
-    "ts-node": "^10.0.0",
-    "tslib": "^2.2.0",
-    "typescript": "^4.3.2"
+    "husky": "^7.0.4",
+    "semantic-release": "^18.0.1",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   }
 }
