--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -5,7 +5,7 @@ on:
         type: string
         description: Secrets
         required: false
-        default: ''
+        default: ""
 
 env:
   VAULT_ENDPOINT: http://vault.infrastructure.svc.cluster.local:8200
@@ -34,6 +34,7 @@ jobs:
             infrastructure/data/bndigital/staging/spaces            secret-access-key     | AWS_SECRET_ACCESS_KEY       ;
             infrastructure/data/bndigital/staging/spaces            access-key-id         | SPACES_ACCESS_KEY_ID        ;
             infrastructure/data/bndigital/staging/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
+            ${{ inputs.secrets }}
 
       - name: Populate Github secrets
         uses: google/secrets-sync-action@v1.7.0
@@ -49,3 +50,4 @@ jobs:
           dry_run: false
           github_token: ${{ env.GH_TOKEN }}
           concurrency: 10
+          
