--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -43,8 +43,8 @@ jobs:
             ^DOCKER_.*
             ^AWS_.*
             ^SPACES_.*
-            ^KUBERNETES_.*
             ^DIGITALOCEAN_.*
+            KUBERNETES_CLUSTER
           repositories: |
             ${{ github.repository_owner }}/${{ github.event.repository.name }}
           dry_run: false
