--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -1,6 +1,11 @@
 on:
   workflow_call:
     inputs:
+      environment:
+        type: string
+        default: staging
+        description: Environment name
+        required: false
       secrets:
         type: string
         description: Secrets
@@ -13,12 +18,11 @@ env:
 
 jobs:
   staging:
-    name: Staging secrets
     runs-on: self-hosted
     environment:
       name: staging
     steps:
-      - name: Fetch Vault secrets
+      - name: Read from Vault
         uses: hashicorp/vault-action@v2.4.0
         with:
           method: github
@@ -36,7 +40,7 @@ jobs:
             infrastructure/data/bndigital/staging/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
             ${{ inputs.secrets }}
 
-      - name: Populate Github secrets
+      - name: Write to Github
         uses: google/secrets-sync-action@v1.7.0
         with:
           secrets: |
@@ -50,4 +54,4 @@ jobs:
           dry_run: false
           github_token: ${{ env.GH_TOKEN }}
           concurrency: 10
-          
+
