--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -17,7 +17,7 @@ env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
-  staging:
+  vault:
     runs-on: self-hosted
     environment:
       name: staging
@@ -38,6 +38,8 @@ jobs:
             infrastructure/data/bndigital/staging/spaces            secret-access-key     | AWS_SECRET_ACCESS_KEY       ;
             infrastructure/data/bndigital/staging/spaces            access-key-id         | SPACES_ACCESS_KEY_ID        ;
             infrastructure/data/bndigital/staging/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
+            infrastructure/data/bndigital/staging/sonarqube         host                  | SONAR_HOST_URL              ;
+            infrastructure/data/bndigital/staging/sonarqube         token                 | SONAR_TOKEN                 ;
             ${{ inputs.secrets }}
 
       - name: Write to Github
@@ -47,6 +49,7 @@ jobs:
             ^DOCKER_.*
             ^AWS_.*
             ^SPACES_.*
+            ^SONAR_.*
             ^DIGITALOCEAN_.*
             KUBERNETES_CLUSTER
           repositories: |
