secrets workflow update

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -1,60 +1,55 @@
 on:
   workflow_call:
     inputs:
-      environment:
-        type: string
-        default: staging
-        description: Environment name
-        required: false
       secrets:
         type: string
         description: Secrets
         required: false
         default: ""
 
-env:
-  VAULT_ENDPOINT: http://vault.infrastructure.svc.cluster.local:8200
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
 jobs:
   vault:
     runs-on: self-hosted
-    environment:
-      name: staging
+    env:
+      GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
     steps:
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.4.0
         with:
           method: github
-          url: ${{ env.VAULT_ENDPOINT }}
-          githubToken: ${{ env.GH_TOKEN }}
+          url: ${{ secrets.VAULT_ENDPOINT }}
+          githubToken: ${{ env.GITHUB_TOKEN }}
           secrets: |
-            infrastructure/data/bndigital/staging/registry          docker-url            | DOCKER_REGISTRY             ;
-            infrastructure/data/bndigital/staging/registry          docker-username       | DOCKER_USERNAME             ;
-            infrastructure/data/bndigital/staging/registry          docker-password       | DOCKER_PASSWORD             ;
-            infrastructure/data/bndigital/staging/kubernetes        cluster               | KUBERNETES_CLUSTER          ;
-            infrastructure/data/bndigital/staging/digitalocean      token                 | DIGITALOCEAN_TOKEN          ;
-            infrastructure/data/bndigital/staging/spaces            access-key-id         | AWS_ACCESS_KEY_ID           ;
-            infrastructure/data/bndigital/staging/spaces            secret-access-key     | AWS_SECRET_ACCESS_KEY       ;
-            infrastructure/data/bndigital/staging/spaces            access-key-id         | SPACES_ACCESS_KEY_ID        ;
-            infrastructure/data/bndigital/staging/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
-            infrastructure/data/bndigital/staging/sonarqube         host                  | SONAR_HOST_URL              ;
-            infrastructure/data/bndigital/staging/sonarqube         token                 | SONAR_TOKEN                 ;
+            infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
+            infrastructure/data/registry          docker-url            | DOCKER_REGISTRY             ;
+            infrastructure/data/registry          docker-username       | DOCKER_USERNAME             ;
+            infrastructure/data/kubernetes        cluster               | KUBERNETES_CLUSTER          ;
+            infrastructure/data/digitalocean      token                 | DIGITALOCEAN_TOKEN          ;
+            infrastructure/data/spaces            access-key-id         | AWS_ACCESS_KEY_ID           ;
+            infrastructure/data/spaces            secret-access-key     | AWS_SECRET_ACCESS_KEY       ;
+            infrastructure/data/spaces            access-key-id         | SPACES_ACCESS_KEY_ID        ;
+            infrastructure/data/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
+            infrastructure/data/sonarqube         url                   | SONAR_HOST_URL              ;
+            infrastructure/data/sonarqube         token                 | SONAR_TOKEN                 ;
+            infrastructure/data/sentry            organization          | SENTRY_ORG                  ;
+            infrastructure/data/sentry            url                   | SENTRY_URL                  ;
+            infrastructure/data/sentry            token                 | SENTRY_AUTH_TOKEN           ;
             ${{ inputs.secrets }}
 
       - name: Write to Github
         uses: google/secrets-sync-action@v1.7.0
         with:
           secrets: |
-            ^DOCKER_.*
             ^AWS_.*
-            ^SPACES_.*
-            ^SONAR_.*
+            ^BN_.*
             ^DIGITALOCEAN_.*
-            KUBERNETES_CLUSTER
+            ^DOCKER_.*
+            ^KUBERNETES_.*
+            ^SENTRY_.*
+            ^SONAR_.*
+            ^SPACES_.*
           repositories: |
-            ${{ github.repository_owner }}/${{ github.event.repository.name }}
+            ${{ github.repository }}
           dry_run: false
-          github_token: ${{ env.GH_TOKEN }}
-          concurrency: 10
+          github_token: ${{ env.GITHUB_TOKEN }}
 
