secrets workflow update

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -10,15 +10,13 @@ on:
 jobs:
   vault:
     runs-on: self-hosted
-    env:
-      GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
     steps:
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.4.0
         with:
           method: github
           url: ${{ secrets.VAULT_ENDPOINT }}
-          githubToken: ${{ env.GITHUB_TOKEN }}
+          githubToken: ${{ secrets.BN_GITHUB_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          docker-url            | DOCKER_REGISTRY             ;
