secrets workflow update

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -7,6 +7,10 @@ on:
         required: false
         default: ""
 
+env:
+  VAULT_ENDPOINT: ${{ secrets.VAULT_ENDPOINT }}
+  GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
+
 jobs:
   vault:
     runs-on: self-hosted
@@ -15,12 +19,12 @@ jobs:
         uses: hashicorp/vault-action@v2.4.0
         with:
           method: github
-          url: ${{ secrets.VAULT_ENDPOINT }}
-          githubToken: ${{ secrets.BN_GITHUB_TOKEN }}
+          url: ${{ env.VAULT_ENDPOINT }}
+          githubToken: ${{ env.GITHUB_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
-            infrastructure/data/registry          docker-url            | DOCKER_REGISTRY             ;
-            infrastructure/data/registry          docker-username       | DOCKER_USERNAME             ;
+            infrastructure/data/registry          username              | DOCKER_USERNAME             ;
+            infrastructure/data/registry          password              | DOCKER_PASSWORD             ;
             infrastructure/data/kubernetes        cluster               | KUBERNETES_CLUSTER          ;
             infrastructure/data/digitalocean      token                 | DIGITALOCEAN_TOKEN          ;
             infrastructure/data/spaces            access-key-id         | AWS_ACCESS_KEY_ID           ;
@@ -39,7 +43,6 @@ jobs:
         with:
           secrets: |
             ^AWS_.*
-            ^BN_.*
             ^DIGITALOCEAN_.*
             ^DOCKER_.*
             ^KUBERNETES_.*
@@ -49,5 +52,5 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ env.GITHUB_TOKEN }}
+          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
 
