secrets workflow update

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -9,12 +9,13 @@ on:
 
 env:
   VAULT_ENDPOINT: ${{ secrets.VAULT_ENDPOINT }}
-  GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
   vault:
     runs-on: self-hosted
     steps:
+
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.4.0
         with:
@@ -49,8 +50,9 @@ jobs:
             ^SENTRY_.*
             ^SONAR_.*
             ^SPACES_.*
+            ^VAULT_.*
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
+          github_token: ${{ env.GH_TOKEN }}
 
