secrets workflow update

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   VAULT_ENDPOINT: ${{ secrets.VAULT_ENDPOINT }}
-  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+  BN_GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
   vault:
@@ -21,7 +21,7 @@ jobs:
         with:
           method: github
           url: ${{ env.VAULT_ENDPOINT }}
-          githubToken: ${{ env.GITHUB_TOKEN }}
+          githubToken: ${{ env.BN_GITHUB_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
@@ -54,5 +54,5 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ env.GH_TOKEN }}
+          github_token: ${{ env.BN_GITHUB_TOKEN }}
 
