--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -6,21 +6,16 @@ on:
         description: Secrets
         required: false
         default: ""
-
-env:
-  VAULT_ENDPOINT: ${{ secrets.VAULT_ENDPOINT }}
-  BN_GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
 jobs:
   vault:
     runs-on: self-hosted
     steps:
       - name: Read from Vault
-        uses: hashicorp/vault-action@v2.4.2
+        uses: hashicorp/vault-action@v2.5.0
         with:
           method: github
-          url: ${{ env.VAULT_ENDPOINT }}
-          githubToken: ${{ env.BN_GITHUB_TOKEN }}
+          url: ${{ secrets.VAULT_PUBLIC_URL }}
+          githubToken: ${{ secrets.BN_GITHUB_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
@@ -49,7 +44,6 @@ jobs:
             ^SENTRY_.*
             ^SONAR_.*
             ^SPACES_.*
-            ^VAULT_.*
           repositories: |
             ${{ github.repository }}
           dry_run: false
