--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -34,7 +34,7 @@ jobs:
             ${{ inputs.secrets }}
 
       - name: Write to Github
-        uses: google/secrets-sync-action@v1.7.0
+        uses: google/secrets-sync-action@v1.7.1
         with:
           secrets: |
             ^AWS_.*
@@ -47,5 +47,5 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ env.BN_GITHUB_TOKEN }}
+          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
 
