--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -6,6 +6,9 @@ on:
         description: Secrets
         required: false
         default: ""
+env:
+  GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
+  VAULT_PUBLIC_URL: ${{ secrets.VAULT_ENDPOINT }}
 jobs:
   vault:
     runs-on: self-hosted
@@ -14,8 +17,8 @@ jobs:
         uses: hashicorp/vault-action@v2.5.0
         with:
           method: github
-          url: ${{ secrets.VAULT_PUBLIC_URL }}
-          githubToken: ${{ secrets.BN_GITHUB_TOKEN }}
+          url: ${{ env.VAULT_PUBLIC_URL }}
+          githubToken: ${{ env.GITHUB_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
@@ -32,9 +35,8 @@ jobs:
             infrastructure/data/sentry            url                   | SENTRY_URL                  ;
             infrastructure/data/sentry            token                 | SENTRY_AUTH_TOKEN           ;
             ${{ inputs.secrets }}
-
       - name: Write to Github
-        uses: google/secrets-sync-action@v1.7.1
+        uses: google/secrets-sync-action@v1.7.0
         with:
           secrets: |
             ^AWS_.*
@@ -47,5 +49,4 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
-
+          github_token: ${{ env.GITHUB_TOKEN }}
