Fixed env variable resolution

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -6,9 +6,6 @@ on:
         description: Secrets
         required: false
         default: ""
-env:
-  GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
-  VAULT_PUBLIC_URL: ${{ secrets.VAULT_ENDPOINT }}
 jobs:
   vault:
     runs-on: self-hosted
@@ -17,8 +14,8 @@ jobs:
         uses: hashicorp/vault-action@v2.5.0
         with:
           method: github
-          url: ${{ env.VAULT_PUBLIC_URL }}
-          githubToken: ${{ env.GITHUB_TOKEN }}
+          url: ${{ secrets.VAULT_PUBLIC_URL }}
+          githubToken: ${{ secrets.GH_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
@@ -35,6 +32,7 @@ jobs:
             infrastructure/data/sentry            url                   | SENTRY_URL                  ;
             infrastructure/data/sentry            token                 | SENTRY_AUTH_TOKEN           ;
             ${{ inputs.secrets }}
+
       - name: Write to Github
         uses: google/secrets-sync-action@v1.7.0
         with:
@@ -49,4 +47,4 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ env.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
