Fixed env variable resolution

--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -14,7 +14,7 @@ jobs:
         uses: hashicorp/vault-action@v2.5.0
         with:
           method: github
-          url: ${{ secrets.VAULT_PUBLIC_URL }}
+          url: ${{ secrets.VAULT_ENDPOINT }}
           githubToken: ${{ secrets.GH_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
