--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -9,12 +9,14 @@ on:
 jobs:
   vault:
     runs-on: self-hosted
+    env:
+      VAULT_ENDPOINT: "http://vault.infrastructure:8200"
     steps:
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.5.0
         with:
           method: github
-          url: ${{ secrets.VAULT_ENDPOINT }}
+          url: ${{ env.VAULT_ENDPOINT }}
           githubToken: ${{ secrets.GH_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
