--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -8,7 +8,7 @@ on:
         default: ""
 jobs:
   vault:
-    runs-on: self-hosted
+    runs-on: ${{ github.ref_protected && 'self-hosted' || 'ubuntu-latest' }}
     env:
       VAULT_ENDPOINT: "http://vault.infrastructure:8200"
     steps:
@@ -30,9 +30,6 @@ jobs:
             infrastructure/data/spaces            secret-access-key     | SPACES_SECRET_ACCESS_KEY    ;
             infrastructure/data/sonarqube         url                   | SONAR_HOST_URL              ;
             infrastructure/data/sonarqube         token                 | SONAR_TOKEN                 ;
-            infrastructure/data/sentry            organization          | SENTRY_ORG                  ;
-            infrastructure/data/sentry            url                   | SENTRY_URL                  ;
-            infrastructure/data/sentry            token                 | SENTRY_AUTH_TOKEN           ;
             ${{ inputs.secrets }}
 
       - name: Write to Github
