--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -8,7 +8,7 @@ on:
         default: ""
 jobs:
   vault:
-    runs-on: ${{ github.ref_protected && 'self-hosted' || 'ubuntu-latest' }}
+    runs-on: self-hosted
     steps:
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.5.0
