--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           method: github
           url: ${{ secrets.VAULT_ENDPOINT }}
-          githubToken: ${{ secrets.GH_TOKEN }}
+          githubToken: ${{ github.token }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
