--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           method: github
           url: ${{ secrets.VAULT_ENDPOINT }}
-          githubToken: ${{ github.token }}
+          token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
@@ -37,7 +37,7 @@ jobs:
             ^AWS_.*
             ^DIGITALOCEAN_.*
             ^DOCKER_.*
-            ^KUBERNETES_.*
+            ^KUBERNETES_CLUSTER*
             ^SENTRY_.*
             ^SONAR_.*
             ^SPACES_.*
