--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -16,6 +16,7 @@ jobs:
           url: ${{ secrets.VAULT_ENDPOINT }}
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
+            infrastructure/data/github            token                 | GH_TOKEN
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
             infrastructure/data/registry          password              | DOCKER_PASSWORD             ;
