--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -16,7 +16,7 @@ jobs:
           url: ${{ secrets.VAULT_ENDPOINT }}
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
-            infrastructure/data/github            token                 | GH_TOKEN
+            infrastructure/data/github            token                 | BN_GITHUB_TOKEN
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
             infrastructure/data/registry          password              | DOCKER_PASSWORD             ;
@@ -35,6 +35,7 @@ jobs:
         with:
           secrets: |
             ^AWS_.*
+            ^BN_.*
             ^DIGITALOCEAN_.*
             ^DOCKER_.*
             ^KUBERNETES_CLUSTER*
@@ -44,4 +45,4 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ secrets.GH_TOKEN }}
+          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
