--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -45,4 +45,4 @@ jobs:
           repositories: |
             ${{ github.repository }}
           dry_run: false
-          github_token: ${{ secrets.BN_GITHUB_TOKEN }}
+          github_token: ${{ env.BN_GITHUB_TOKEN }}
