--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -17,6 +17,8 @@ jobs:
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
             infrastructure/data/github            token                 | BN_GITHUB_TOKEN             ;
+            infrastructure/data/vault             url                   | VAULT_ENDPOINT              ;
+            infrastructure/data/vault             pulumi-token          | VAULT_TOKEN                 ;
             infrastructure/data/registry          url                   | DOCKER_REGISTRY             ;
             infrastructure/data/registry          username              | DOCKER_USERNAME             ;
             infrastructure/data/registry          password              | DOCKER_PASSWORD             ;
@@ -41,6 +43,7 @@ jobs:
             ^SENTRY_.*
             ^SONAR_.*
             ^SPACES_.*
+            ^VAULT_.*
           repositories: |
             ${{ github.repository }}
           dry_run: false
