--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -7,12 +7,17 @@ jobs:
   vault-github:
     name: Sync global
     runs-on: self-hosted
+    env:
+      VAULT_ENDPOINT: ${{ secrets.VAULT_ENDPOINT }}
+      VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
+      BN_GITHUB_TOKEN: ${{ secrets.BN_GITHUB_TOKEN }}
     steps:
       - name: Set secrets from this repo and organization
         uses: google/secrets-sync-action@v1.7.1
         with:
           secrets: |
             ^VAULT_.*
+            ^BN_.*
           repositories: |
             ${{ github.repository_owner }}/${{ github.event.repository.name }}
           dry_run: false
