--- a/.github/workflows/import-secrets.yml
+++ b/.github/workflows/import-secrets.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Read from Vault
         uses: hashicorp/vault-action@v2.5.0
         with:
-          url: ${{ env.VAULT_ENDPOINT }}
-          token: ${{ env.VAULT_TOKEN }}
+          url: ${{ secrets.VAULT_ENDPOINT }}
+          token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
             infrastructure/data/github            token                 | BN_GITHUB_TOKEN             ;
             infrastructure/data/vault             url                   | VAULT_ENDPOINT              ;
